eks/apps/httpbin/httpbin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: default
  labels:
    app: httpbin    
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: httpbin

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: httpbin-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 80
