eks/apps/httpbin/httpbin-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-lb-service
spec:
  selector:
    app: httpbin
    version: v1    
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
