eks/apps/httpbin/httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/subnets: subnet-084c5895eb1d52dd7,subnet-02071d8a55e08f4bf,subnet-0020f3fbe59736d60
  name: httpbin-ingress
  namespace: default
spec:
  rules:
    - host: httpbin.dev.auscoservices.com.au
      http:
        paths:
          - path: /*
            backend:
              serviceName: httpbin-service
              servicePort: http
